# oop-3-texteditor

./: .gitignore  CMakeLists.txt
MyString/: CMakeLists.txt  README.md
MyString/src/: charlist.h  main.cpp  mystring.cpp  mystring.h
MyString/src/Aho-Corasick/: README.md  aho.cpp  aho.h
MyString/tests/: mystring-append.cc  mystring-capacity.cc  mystring-erase.cc  mystring-extras.cc  mystring-find.cc  mystring-insert.cc  mystring-operators.cc  mystring-replace.cc  mystring-substr.cc  test_tools.h
src/: main.cpp
